Add restricted artifact content APIs
